--- a/ltout.html
+++ b/ltout.html
@@ -17,7 +17,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities.my.site.com/reservationbooking/'  // Community endpoint
+            }, 'https://lifestylecommunities.force.com/reservationbooking/'  // Community endpoint
         );
 </script>
 
