--- a/ltout.html
+++ b/ltout.html
@@ -1,6 +1,6 @@
 <head></head>
 <body>
-<script src="https://lifestylecommunities.my.site.com/reservationbooking/lightning/lightning.out.js"></script>
+<script src="https://lifestylecommunities.force.com/reservationbooking/lightning/lightning.out.js"></script>
 <script>
         var communityName = "Lifestyle Bellarine";
         let inputVariables = [{ name : "communityName",
@@ -17,7 +17,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities.force.com/reservationbooking/'  // Community endpoint
+            }, 'https://lifestylecommunities.my.site.com/reservationbooking/'  // Community endpoint
         );
 </script>
 
