--- a/ltout.html
+++ b/ltout.html
@@ -17,7 +17,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities.my.salesforce-sites.com'  // Community endpoint
+            }, 'https://lifestylecommunities.my.sites.com/reservationbooking'  // Community endpoint
         );
 </script>
 
