--- a/ltout.html
+++ b/ltout.html
@@ -2,7 +2,7 @@
 <body>
 <script src="https://lifestylecommunities--scheddev.sandbox.my.site.com/reservationbooking/lightning/lightning.out.js"></script>
 <script>
-        var communityName = "Lifestyle Bellarine";
+        var communityName = "";
         let inputVariables = [{ name : "communityName",
                              type : "String",
                              value : communityName}];
