--- a/ltout.html
+++ b/ltout.html
@@ -1,6 +1,6 @@
 <head></head>
 <body>
-<script src="https://lifestylecommunities--scheddev.sandbox.my.site.com/reservationbooking/lightning/lightning.out.js"></script>
+<script src="https://lifestylecommunities--scheddev.sandbox.lightning.force.com/lightning/lightning.out.js"></script>
 <script>
         var communityName = "";
         let inputVariables = [{ name : "communityName",
