--- a/ltout.html
+++ b/ltout.html
@@ -17,7 +17,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment'  // Community endpoint
+            }, 'https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment/'  // Community endpoint
         );
 </script>
 
