--- a/ltout.html
+++ b/ltout.html
@@ -10,7 +10,7 @@
 
 <head></head>
 <body>
-<script src="https://lifestylecommunities.my.site.com/reservationbooking/lightning/lightning.out.js"></script>
+<script src="https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment/lightning/lightning.out.js"></script>
 <script>
         var communityName = "Lifestyle Bellarine";
         let inputVariables = [{ name : "communityName",
@@ -27,7 +27,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities.my.sites.com/reservationbooking'  // Community endpoint
+            }, 'https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment'  // Community endpoint
         );
 </script>
 
