--- a/ltout.html
+++ b/ltout.html
@@ -8,7 +8,10 @@
         }
 </style>
 
-<head></head>
+<head>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+        
+</head>
 <body>
 <script src="https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/lightning/lightning.out.js"></script>
 <script>
