--- a/ltout.html
+++ b/ltout.html
@@ -12,7 +12,7 @@
         
 </head>
 <body>
-<script src="https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/lightning/lightning.out.js"></script>
+<script src="https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment/lightning/lightning.out.js"></script>
 <script>
         var communityName = "Lifestyle Bellarine";
         let inputVariables = [{ name : "communityName",
