--- a/ltout.html
+++ b/ltout.html
@@ -12,7 +12,7 @@
         
 </head>
 <body>
-<script src="https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment/lightning/lightning.out.js"></script>
+<script src="https://lifestylecommunities--scheddev.sandbox.my.site.com/reservationbooking/lightning/lightning.out.js"></script>
 <script>
         var communityName = "Lifestyle Bellarine";
         let inputVariables = [{ name : "communityName",
@@ -29,7 +29,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            }, 'https://lifestylecommunities--scheddev.sandbox.my.salesforce-sites.com/BookAppointment'  // Community endpoint
+            }, 'https://lifestylecommunities--scheddev.sandbox.my.site.com/reservationbooking'  // Community endpoint
         );
 </script>
 
