--- a/ltout.html
+++ b/ltout.html
@@ -29,7 +29,7 @@
                         cmp.startFlow('Scheduled_Flow_Appointment_Booking',inputVariables);
                     }
                 );
-            },        'https://scheddev-lifestylecommunities.cs111.force.com'  // Community endpoint
+            },        'https://lifestylecommunities--scheddev.sandbox.my.site.com/reservationbooking'  // Community endpoint
         );
 </script>
 
